--- a/C# Language Fundamentals/04. Encapsulation (Access Modifiers & Properties)/01. Access Modifiers/01.3 Advanced.md
+++ b/C# Language Fundamentals/04. Encapsulation (Access Modifiers & Properties)/01. Access Modifiers/01.3 Advanced.md
@@ -1,268 +1,198 @@
-Let's delve deeper into the nuances of C\# access modifiers, especially the compound ones and their behavior across assemblies.
+Let's explore how access modifiers behave in inheritance across assemblies, the use of `InternalsVisibleTo`, the implications of `protected` members, and access for nested classes.
 
-### 1\. Can you combine `protected` and `internal` access? What does `protected internal` mean exactly?
+### 1\. How do access modifiers behave in inheritance across assemblies?
 
-**Yes, you can combine `protected` and `internal` access using the `protected internal` keyword.**
+The behavior of access modifiers in inheritance across assemblies (i.e., when a derived class is in a different assembly than its base class) is crucial for designing extensible libraries. Here's a breakdown for each relevant modifier:
 
-The `protected internal` access modifier means that a member is accessible from:
+  * **`public`**:
 
-1.  **Anywhere within the same assembly** (`internal` part).
-2.  **From derived classes (subclasses)**, even if those derived classes are located in a **different assembly** (`protected` part).
+      * **Behavior:** `public` members of the base class are fully accessible to the derived class in any assembly.
+      * **Inheritance:** `public` members are inherited and remain `public` in the derived class.
+      * **Across Assemblies:** No restrictions.
+      * **Example:** If `AssemblyA` has `public class Base { public int Data; }` and `AssemblyB` has `class Derived : Base`, `Derived` can access `Data`.
 
-It's essentially a **union** of the `protected` and `internal` access rules. If either rule grants access, then `protected internal` grants access.
+  * **`protected`**:
 
-**Think of it this way:**
+      * **Behavior:** `protected` members of the base class **are accessible** to the derived class, even if the derived class is in a different assembly.
+      * **Inheritance:** `protected` members are inherited and remain `protected` in the derived class (or can be overridden with `public` if virtual/abstract).
+      * **Across Assemblies:** This is the primary modifier for providing extensibility points to derived classes that might be in external assemblies.
+      * **Example:** If `AssemblyA` has `public class Base { protected int Data; }` and `AssemblyB` has `class Derived : Base`, `Derived` *can* access `Data`. This is a core use case for `protected`.
 
-  * `protected`: "Accessible to my family (inheritors), no matter where they are."
-  * `internal`: "Accessible to anyone in my house (assembly)."
-  * `protected internal`: "Accessible to my family members OR anyone in my house."
+  * **`internal`**:
 
-**Example:**
+      * **Behavior:** `internal` members of the base class **are NOT accessible** to a derived class if that derived class is in a *different* assembly.
+      * **Inheritance:** While inherited, they remain `internal` to the base class's assembly context. They are not exposed to derived classes outside that assembly.
+      * **Across Assemblies:** Access is restricted to the defining assembly.
+      * **Example:** If `AssemblyA` has `public class Base { internal int Data; }` and `AssemblyB` has `class Derived : Base`, `Derived` *cannot* access `Data`. This is why `protected internal` was introduced.
 
-```csharp
-// AssemblyA.dll
-namespace MyLibrary.Core
-{
-    public class BaseComponent
-    {
-        // This field can be accessed by:
-        // 1. Any code within MyLibrary.Core assembly.
-        // 2. Any class that inherits from BaseComponent, even if that class is in another assembly.
-        protected internal string ConfigurationSetting { get; set; } = "DefaultConfig";
+  * **`protected internal`**:
 
-        public BaseComponent()
-        {
-            Console.WriteLine($"BaseComponent created with config: {ConfigurationSetting}");
-        }
-    }
+      * **Behavior:** `protected internal` members of the base class **are accessible** to a derived class, even if that derived class is in a different assembly.
+      * **Inheritance:** Inherited and remain `protected internal`.
+      * **Across Assemblies:** Access is granted to derived classes regardless of assembly, *or* to any code within the base class's assembly. This means derived classes in other assemblies *can* access them.
+      * **Example:** If `AssemblyA` has `public class Base { protected internal int Data; }` and `AssemblyB` has `class Derived : Base`, `Derived` *can* access `Data`.
 
-    public class AnotherClassInSameAssembly
-    {
-        public void TestAccess()
-        {
-            BaseComponent component = new BaseComponent();
-            Console.WriteLine($"Accessing from same assembly: {component.ConfigurationSetting}"); // OK (internal access)
-        }
-    }
-}
+  * **`private protected`**:
 
-// AssemblyB.dll (references AssemblyA.dll)
-namespace MyApp.Client
-{
-    public class DerivedComponent : MyLibrary.Core.BaseComponent
-    {
-        public DerivedComponent()
-        {
-            // OK (protected access, as DerivedComponent inherits BaseComponent)
-            ConfigurationSetting = "DerivedConfig";
-            Console.WriteLine($"DerivedComponent created with config: {ConfigurationSetting}");
-        }
-    }
+      * **Behavior:** `private protected` members of the base class **are NOT accessible** to a derived class if that derived class is in a *different* assembly. Access requires *both* being derived *and* being in the same assembly.
+      * **Inheritance:** Inherited but remain `private protected`.
+      * **Across Assemblies:** Access is restricted to derived classes *within the same assembly*. This is the stricter version of `protected`.
+      * **Example:** If `AssemblyA` has `public class Base { private protected int Data; }` and `AssemblyB` has `class Derived : Base`, `Derived` *cannot* access `Data`.
 
-    public class NonDerivedClassInOtherAssembly
-    {
-        public void TestAccess()
-        {
-            MyLibrary.Core.BaseComponent component = new MyLibrary.Core.BaseComponent();
-            // Console.WriteLine(component.ConfigurationSetting); // ERROR: Cannot access.
-            // Not 'internal' (different assembly) AND not 'protected' (not derived).
-        }
-    }
-}
-```
+  * **`private`**:
 
-### 2\. What’s the difference between `protected internal` and `private protected`, and when would you use each?
+      * **Behavior:** `private` members are **never accessible** from a derived class, regardless of whether it's in the same or a different assembly. They are strictly confined to the declaring type.
+      * **Inheritance:** Not directly accessible or exposed through inheritance.
+      * **Across Assemblies:** Not applicable, as access is limited to the declaring class.
 
-The difference lies in whether the access extends beyond the declaring assembly for derived classes, and whether it's an "OR" or "AND" condition for access.
+**Summary Table for Derived Class Access Across Assemblies:**
 
-| Feature            | `protected internal`                                  | `private protected` (C\# 7.2+)                               |
-| :----------------- | :---------------------------------------------------- | :---------------------------------------------------------- |
-| **Meaning** | Accessible from **same assembly OR derived classes** (anywhere) | Accessible from **derived classes AND same assembly** |
-| **Access Rule** | Union (`internal || protected`)                       | Intersection (`protected && internal`)                      |
-| **Derived Classes (Other Assemblies)** | Yes, accessible by derived classes in *other* assemblies. | No, NOT accessible by derived classes in *other* assemblies. Access must be from a derived class *in the same assembly*. |
-| **Purpose** | Members for the entire assembly, and also for extending by derived types outside the assembly. | Members for extending by derived types, but *only* within the same assembly. Tighter control for internal inheritance. |
-| **Analogy** | "My team can see this, *or* my heirs can see this."    | "Only my heirs who are *also* on my team can see this."     |
+| Base Class Member Access | Derived Class in Same Assembly | Derived Class in Different Assembly |
+| :----------------------- | :----------------------------- | :---------------------------------- |
+| `public`                 | Yes                            | Yes                                 |
+| `protected`              | Yes                            | Yes                                 |
+| `internal`               | Yes                            | No                                  |
+| `protected internal`     | Yes                            | Yes                                 |
+| `private protected`      | Yes                            | No                                  |
+| `private`                | No                             | No                                  |
 
-**When to use each:**
+### 2\. Explain how you would use the `InternalsVisibleTo` attribute. When is this appropriate?
 
-  * **Use `protected internal` when:**
+The `[InternalsVisibleTo]` attribute is an assembly-level attribute that allows one assembly to access the `internal` (and `private protected`) types and members of another assembly.
 
-      * You are building a framework or library that needs to expose certain members to **all code within your library's assembly** (e.g., helper methods, configuration)
-      * **AND** you want to allow **developers consuming your library to extend its behavior by inheriting your classes**, and those inherited classes might reside in different assemblies.
-      * It's a balance between `internal` encapsulation and `protected` extensibility.
+**How to Use It:**
 
-  * **Use `private protected` when:**
+1.  **Identify the Source Assembly:** This is the assembly that contains the `internal` types/members you want to expose.
 
-      * You are designing a complex component or framework where you want to allow **inheritance**, but only for classes that are **part of the same logical unit (assembly)**.
-      * You want to provide methods or fields that derived classes can use to customize behavior, but you specifically want to prevent derived classes in *other* assemblies from seeing or modifying these members.
-      * This is often used for **internal base classes** within a larger framework where you want to enable specific internal customization points without exposing them to external inheritance. It provides stronger encapsulation for your internal design.
+2.  **Identify the Target Assembly:** This is the assembly that needs to access those `internal` members.
 
-### 3\. How does access work across assemblies when using `internal` or `InternalsVisibleTo` attribute?
+3.  **Add the Attribute to the Source Assembly:** You add the `[InternalsVisibleTo]` attribute to the `AssemblyInfo.cs` file (or directly in the project file `.csproj` in SDK-style projects) of the **source assembly**. The attribute's constructor takes a string parameter: the full name of the target assembly.
 
-By default, `internal` members are strictly limited to the assembly in which they are declared. However, C\# provides a mechanism to "break" this rule for specific, trusted assemblies: the `InternalsVisibleTo` attribute.
+      * **For non-strong-named target assemblies:**
+        ```csharp
+        // In AssemblyA's AssemblyInfo.cs or .csproj:
+        [assembly: System.Runtime.CompilerServices.InternalsVisibleTo("AssemblyB")]
+        ```
+      * **For strong-named target assemblies:** If `AssemblyB` is strong-named (signed), you **must** provide its full public key (or public key token).
+        ```csharp
+        // In AssemblyA's AssemblyInfo.cs or .csproj:
+        [assembly: System.Runtime.CompilerServices.InternalsVisibleTo("AssemblyB, PublicKey=0024000004800000940000000602000000240000525341310004000001000100f508a8a4f9b8b0e8d0e7e7d6b5c3e7b1a1c9e8d7e6e5e4e3e2e1e0d9d8d7d6d5d4d3d2d1c0c9c8c7c6c5c4c3c2c1a0a9a8a7a6a5a4a3a2a1b0b9b8b7b6b5b4b3b2b1")]
+        ```
+        You can get the public key token using `sn.exe -Tp <path_to_AssemblyB.dll>`.
 
-  * **Default `internal` behavior across assemblies:**
+**When is this appropriate?**
 
-      * If a member (or type) is declared `internal` in `AssemblyA.dll`, it **cannot be accessed** directly by any code in `AssemblyB.dll` (even if `AssemblyB.dll` references `AssemblyA.dll`).
-      * This provides strong encapsulation at the assembly level.
+`[InternalsVisibleTo]` is appropriate in specific scenarios where you need to break the strict assembly-level encapsulation for controlled reasons, typically for development and testing purposes:
 
-  * **Using `[InternalsVisibleTo]` attribute:**
+1.  **Unit Testing Private/Internal Logic:**
 
-      * The `[InternalsVisibleTo]` attribute is an assembly-level attribute (meaning you apply it to the entire assembly, usually in `AssemblyInfo.cs` or the project file `.csproj`).
-      * It allows you to specify **one or more other assemblies that will be granted access to the `internal` types and members** of the declaring assembly.
-      * This is commonly used for:
-          * **Unit Testing:** To allow a test project (which is a separate assembly) to access the `internal` implementation details of the code it's testing.
-          * **Friend Assemblies:** In large projects, where you might have multiple closely related assemblies that need to share `internal` components without making them `public`.
+      * **Most Common Use Case:** You want to thoroughly unit test the internal workings of your library without making its members `public` just for testing. By marking the test assembly as `InternalsVisibleTo`, you can write tests that directly call `internal` methods or inspect `internal` fields. This keeps your library's public API clean.
 
-**Example:**
+2.  **Friend Assemblies in a Larger Solution:**
 
-```csharp
-// Inside AssemblyA.csproj or AssemblyA/Properties/AssemblyInfo.cs
-// To grant AssemblyB access to internal members of AssemblyA
-[assembly: System.Runtime.CompilerServices.InternalsVisibleTo("AssemblyB")]
-// If AssemblyB is strong-named, you need its full public key.
-// [assembly: System.Runtime.CompilerServices.InternalsVisibleTo("AssemblyB, PublicKey=...")]
+      * In a large solution, you might have multiple closely related assemblies that logically form a single component. They might need to share `internal` types or helper methods among themselves without exposing them to the entire external world.
+      * For example, `MyProduct.Core.dll` might have `internal` types that `MyProduct.PluginFramework.dll` needs to access directly, but no other external assembly should.
 
-// AssemblyA.dll
-namespace MyAssemblyA
-{
-    internal class InternalService // An internal class
-    {
-        public void DoSomethingInternal()
-        {
-            Console.WriteLine("InternalService is doing something...");
-        }
-    }
+3.  **Refactoring and Migration:**
 
-    public class PublicApi
-    {
-        internal string _internalDetail = "Secret Value"; // An internal field
-    }
-}
+      * During a large refactoring effort, you might temporarily use `InternalsVisibleTo` to facilitate transitions between assemblies, allowing controlled access during the migration process. However, this is usually temporary and removed once the refactoring is complete.
 
-// AssemblyB.dll (references AssemblyA.dll)
-namespace MyAssemblyB
-{
-    public class TestAccessToA
-    {
-        public void AccessAInternals()
-        {
-            // If AssemblyA has [InternalsVisibleTo("AssemblyB")], this will compile and run.
-            // Otherwise, it would be a compile-time error.
-            MyAssemblyA.InternalService service = new MyAssemblyA.InternalService();
-            service.DoSomethingInternal();
+**When is it NOT appropriate?**
 
-            MyAssemblyA.PublicApi api = new MyAssemblyA.PublicApi();
-            Console.WriteLine($"Accessing internal detail: {api._internalDetail}");
-        }
-    }
-}
-```
+  * **Exposing Core Logic for General Use:** If a type or member *should* be consumed by external applications, it should be `public`, not `internal` with `InternalsVisibleTo`. Relying on `InternalsVisibleTo` for general API exposure is an anti-pattern as it signals that the design isn't truly separating public contracts from internal implementation.
+  * **Production Code Sharing:** It's not a substitute for proper API design. It's a tool for specific, controlled breaches of encapsulation.
 
-### 4\. What happens if you declare a class `private` inside another class? Can you still use it externally?
+### 3\. What are the implications of marking class members as `protected` in a base class used by third-party developers?
 
-If you declare a class `private` inside another class (a **nested class**), it means:
+Marking class members as `protected` in a base class that's intended for inheritance by third-party developers has significant implications, primarily revolving around **extensibility and stability of the API contract**.
 
-  * **It can only be accessed from within the containing (outer) class.**
-  * **You cannot use it externally** (meaning from outside the containing class), not even from other classes in the same assembly or derived classes. It's strictly an implementation detail of the outer class.
+**Implications:**
+
+1.  **Explicit Extensibility Point:**
+
+      * A `protected` member explicitly signals that it is an **intended extensibility point** for derived classes. It tells third-party developers, "You are allowed to access and potentially override/use this member if you inherit from my base class."
+      * This is fundamental for designing abstract classes, template methods, or custom hooks in a framework.
+
+2.  **Part of the Inheritance Contract (API):**
+
+      * While not `public`, a `protected` member is still part of the **inheritance contract** or **protected API** of your class.
+      * Changes to `protected` members (renaming, changing signature, changing behavior, or removing them) will be **breaking changes** for any third-party derived classes that rely on them. This means you need to exercise caution and versioning considerations, similar to `public` API changes.
+
+3.  **Encapsulation Balance:**
+
+      * It strikes a balance between full `public` exposure (which might expose too much internal detail) and `private` hiding (which prevents necessary customization).
+      * It hides implementation details from general consumers of the base class while revealing them to its inheritors.
+
+4.  **Security and Data Integrity (Caution):**
+
+      * **Less Secure than `private`:** A `protected` field, if not carefully managed, can allow derived classes to bypass validation logic that the base class might enforce through properties.
+      * **Potential for Abuse/Misuse:** Third-party developers might use `protected` members in ways you didn't anticipate, potentially leading to incorrect behavior or security vulnerabilities in their derived classes if the contract isn't clear or the base class isn't robust.
+      * It requires trust that derived classes will use the `protected` members responsibly.
+
+5.  **Testability:**
+
+      * `protected` members can sometimes be harder to test in isolation without creating a derived class.
+
+**Best Practices for `protected` members in frameworks/libraries:**
+
+  * **Design for Inheritance:** Clearly define the purpose and expected usage of each `protected` member. Document them thoroughly.
+  * **Prefer `protected virtual` methods:** For extensibility points, `protected virtual` methods are often preferred over `protected` fields. This allows derived classes to override behavior cleanly, and the base class can still provide a default implementation.
+  * **Validate Inputs:** Ensure that any `protected` methods that accept parameters validate their inputs rigorously, as these inputs could come from third-party derived classes.
+  * **Minimize Exposure:** Only make members `protected` if they are genuinely needed for inheritance scenarios. Default to `private` and elevate visibility only when necessary.
+  * **Immutable State:** Be cautious about exposing mutable internal state via `protected` properties or fields, as derived classes could alter it in unexpected ways, breaking base class invariants.
+
+### 4\. Can a nested class have more restricted access than its parent class?
+
+**Yes, a nested class can (and often does) have more restricted access than its parent (containing) class.**
+
+The access modifier for a nested class specifies its accessibility *relative to its containing type*. It can be any of the C\# access modifiers: `public`, `private`, `protected`, `internal`, `protected internal`, or `private protected`.
+
+**Rules:**
+
+  * The declared accessibility of a nested type must be **less than or equal to** the declared accessibility of its containing type.
+  * This means a `public` outer class can contain `private`, `protected`, `internal`, `public`, etc., nested classes.
+  * An `internal` outer class cannot contain a `public` nested class.
 
 **Example:**
 
 ```csharp
-public class OuterClass
+public class OuterPublicClass // Public outer class
 {
-    private string _outerData;
+    // A private nested class: Only accessible within OuterPublicClass
+    private class PrivateHelperClass { /* ... */ }
 
-    // This is a private nested class
-    private class PrivateNestedHelper
-    {
-        public string Message { get; set; }
+    // A protected internal nested class: Accessible within OuterPublicClass,
+    // or by derived classes of OuterPublicClass (even in other assemblies),
+    // or by any code within the same assembly as OuterPublicClass.
+    protected internal class SettingsManager { /* ... */ }
 
-        public PrivateNestedHelper(string msg)
-        {
-            Message = msg;
-        }
-
-        public void DisplayMessage()
-        {
-            Console.WriteLine($"Nested Private Message: {Message}");
-        }
-    }
-
-    public OuterClass(string data)
-    {
-        _outerData = data;
-        // OK: Can create and use the private nested class from within OuterClass
-        PrivateNestedHelper helper = new PrivateNestedHelper($"Processing '{_outerData}'");
-        helper.DisplayMessage();
-    }
+    // A public nested class: Accessible everywhere that OuterPublicClass is accessible.
+    public class PublicNestedData { /* ... */ }
 
     public void DoSomething()
     {
-        PrivateNestedHelper anotherHelper = new PrivateNestedHelper("Doing something...");
-        anotherHelper.DisplayMessage();
+        PrivateHelperClass helper = new PrivateHelperClass(); // OK: Can use private nested class
+        Console.WriteLine("Used PrivateHelperClass.");
     }
 }
 
-public class ExternalConsumer
+internal class OuterInternalClass // Internal outer class
 {
-    public void Test()
-    {
-        OuterClass outer = new OuterClass("Initial Data");
-        outer.DoSomething();
+    // A private nested class
+    private class InternalPrivateHelper { /* ... */ }
 
-        // OuterClass.PrivateNestedHelper helper; // ERROR: 'PrivateNestedHelper' is inaccessible due to its protection level.
-        // Even if you could declare it, you couldn't instantiate it.
-    }
+    // A public nested class here would be an ERROR.
+    // public class PublicNestedInternalContainer {} // ERROR: Inconsistent accessibility
+
+    // An internal nested class (default if no modifier is given)
+    internal class InternalNestedClass { /* ... */ }
 }
 ```
 
-**Purpose:** This pattern is used when a helper class is solely an implementation detail of another class and has no meaning or purpose outside that containing class. It enhances encapsulation and prevents external code from depending on internal structures.
+**Why is this useful?**
 
-### 5\. Can access modifiers be applied to interfaces or interface members? Why or why not?
+This capability is very powerful for **encapsulation** and **information hiding**:
 
-This is a nuanced area, and the rules differ for interfaces themselves versus their members.
-
-  * **Access Modifiers on Interfaces (the interface declaration itself):**
-
-      * **Yes, they can be applied.**
-      * Top-level interfaces (declared directly in a namespace) can be `public` or `internal`, just like top-level classes.
-          * `public interface IMyPublicInterface { /* ... */ }`
-          * `internal interface IMyInternalInterface { /* ... */ }`
-      * Nested interfaces (declared inside a class) can have any access modifier (`public`, `private`, `protected`, `internal`, `protected internal`, `private protected`), just like other nested types.
-        ```csharp
-        public class Container
-        {
-            private interface INestedPrivateInterface { }
-            public interface INestedPublicInterface { }
-        }
-        ```
-      * **Why:** Because interfaces are types that can be consumed by other parts of your code or other assemblies. Their accessibility needs to be controlled just like classes or structs.
-
-  * **Access Modifiers on Interface Members (methods, properties, events declared *within* an interface):**
-
-      * **Generally, NO, you cannot apply explicit access modifiers to members *within* an interface.**
-      * **Why not?**
-          * **Implicitly `public`:** All members declared in an interface are implicitly `public`. This is a core design principle of interfaces: they define a contract that *must* be implemented publicly by any type that implements the interface. If you could have a `private` or `protected` member in an interface, it would contradict the idea of a public contract.
-          * **No Implementation:** Interface members don't have implementations. Access modifiers like `private` or `protected` relate to how an *implementation* is accessed by other code or derived classes. Since interfaces provide no implementation, these modifiers don't apply.
-      * **Exception/Nuance (C\# 8.0 Default Interface Members and C\# 11 `private` members in interfaces):**
-          * **C\# 8.0 introduced Default Interface Members:** This allows an interface to provide a default implementation for a method. While the *interface member itself* remains implicitly `public`, the *default implementation* can access `private` or `protected` members that are *also* declared within the interface.
-          * **C\# 11 introduced `private` and `static` members in interfaces:** You can now have `private` and `static` members (methods, fields, properties) directly within an interface. These are meant as helper members *for the default implementations within the interface itself*. They are not part of the public contract that implementing classes must fulfill.
-          * Example (C\# 11+):
-            ```csharp
-            public interface ILogger
-            {
-                // Implicitly public method that implementing classes must provide
-                void Log(string message);
-
-                // Default implementation (C# 8.0+), still implicitly public interface member
-                void LogInfo(string message) => Log(FormatMessage(message, "INFO"));
-
-                // Private helper method within the interface (C# 11+)
-                private string FormatMessage(string message, string level)
-                {
-                    return $"[{DateTime.Now:HH:mm:ss}] {level}: {message}";
-                }
-            }
-            ```
-            In this C\# 11 example, `Log` and `LogInfo` are implicitly `public` interface members. `FormatMessage` is a `private` helper method only accessible within the `ILogger` interface itself (e.g., from `LogInfo`'s default implementation).
+  * **Internal Helpers:** You can define small helper classes (`private` or `internal` nested classes) that are specifically designed to assist the functionality of the outer class and are not meant to be exposed or used by other parts of the application. This keeps the global namespace cleaner and prevents misuse of internal components.
+  * **Logical Grouping:** It allows you to logically group related types within the context of their primary user (the outer class).
+  * **Controlled Exposure:** If you need to expose a nested class for specific purposes (e.g., a data structure used as a return type for a method of the outer class), you can make it `public` or `protected internal` depending on the required visibility.
